--- a/app/views/calculation_templates/square_results.html.erb
+++ b/app/views/calculation_templates/square_results.html.erb
@@ -2,7 +2,9 @@
 
 <dl>
   <dt>Nmber</dt>
-  <dd></dd>
+  <dd><%= @num %></dd>
   <dt>Square</dt>
-  <dd></dd>
+  <dd><%= @square_of_num%></dd>
 </dl>
+
+<a href="/square/new">Calculate another square
